--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "knex": "~0.5.7",
     "mocha": "^1.17.1",
     "nodemon": "^1.2.1",
+    "passport": "^0.2.1",
     "request": "^2.34.0",
     "sqlite3": "~3.0.5"
   }
